[package]
name = "langwitch_query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nohash-hasher = "0.2.0"
rmp-serde = "1.1.0"
rayon = "1.5.3"
memmap = "0.7.0"

[dependencies.term_macros]
git = "https://github.com/ckoshka/term_macros"